# HELMo-ORACLE

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_NOTES.md  ROADMAP.md  api.py  app.py  convertisseur.py  docker-compose.yml  git_tutorial.md  interface.py  main.py  pyproject.toml  requirements.txt  test.csv  test.md  test_temporaire_oracle.py  tools_oracle.py  watcher.py
api/: .dockerignore  .env.example  Dockerfile  api.py  docker-compose.yml  mcp_server.py  requirements.txt  watcher.py
bot/: .env.example  .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
config/: config.example.yaml  config.yaml  prompt.example.txt
converters/: convert_csv.py  convert_json.py  convert_markdown.py  convert_pdf.py  convert_text.py  convert_unstructured.py
convertisseurs/: connection_db_example.py  convertisseur_csv.py  convertisseur_md.py  convertisseur_txt.py  db_texte.py
core/: choix_convertisseur.py  gestionnaire_vecteurs.py  guardian.py  ingestion.py  memory_manager.py  preprocess.py  session_manager.py  tools_oracle.py  vector_manager.py  watcher.py
dashboard/: Dockerfile  callbacks.py  config.py  dashboard.py  layout.py  main.py  requirements.txt
data/: instructions.md
docs/: EXAM_REVIEW.md  GUIDE.md  ai_sdk.md  human_in_the_loop.md  hybrid_search.md  workflow.md
frontend/: index.html
pages/: admin.py
providers/: __init__.py  anthropic_provider.py  base.py  error_handler.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
tests/: test_context.py  test_converters.py  test_core.py  (+4 more)
(+169 files in other folders)
