[project]
name = "Oracle-Sacre"
version = "0.1.0"
description = "This project aims to design an intelligent Oracle capable of answering questions about a video game"
readme = "README.md"
requires-python = ">=3.10"

# on ne met que les gros paquets
dependencies = [
    "streamlit>=1.54.0",
    "langchain>=1.2.10",
    "langchain-community",
    "langchain-groq",
    "langgraph>=1.0.8",
    "openai>=2.20.0",
    "groq>=0.37.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "psycopg-binary",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

# python pyproject.toml